--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,9 +10,7 @@
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="-140dp"
-        android:paddingRight="-140dp"
-        app:srcCompat="@mipmap/im_splash_foreground"
-        android:scaleType="fitXY" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/raster"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
