--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlue">#3F51B5</color>
+    <color name="colorBlue2">#303F9F</color>
+    <color name="colorGrey">#8492A6</color>
+    <color name="colorGrey2">#C0CCDA</color>
+    <color name="colorGrey3">#47525E</color>
+    <color name="colorRed">#FF5252</color>
+
 </resources>
