--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#3F51B5</color>
 
     <color name="colorWhite">#FFFFFF</color>
-    <color name="colorBlue">#3F51B5</color>
-    <color name="colorBlue2">#303F9F</color>
     <color name="colorGrey">#8492A6</color>
     <color name="colorGrey2">#C0CCDA</color>
     <color name="colorGrey3">#47525E</color>
