--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -92,14 +92,14 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnSignInLogin"
+        android:id="@+id/btnRegisterRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="210dp"
         app:backgroundTint="@color/colorRed"
         android:background="@color/colorRed"
-        android:text="@string/login"
+        android:text="@string/register"
         android:textColor="@color/colorWhite"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
