--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -8,8 +8,19 @@
     <fragment
         android:id="@+id/signInFragment"
         android:name="com.example.desafiomobileandroid.signin.view.SignInFragment"
-        android:label="fragment_sign_in"
-        tools:layout="@layout/fragment_sign_in">
+        tools:layout="@layout/fragment_sign_in"
+        android:label="@string/app_name">
+        <action
+            android:id="@+id/action_signInFragment_to_registerFragment"
+            app:destination="@id/registerFragment"
+            app:enterAnim="@android:anim/slide_in_left" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.example.desafiomobileandroid.register.view.RegisterFragment"
+        tools:layout="@layout/fragment_register"
+        android:label="@string/app_name">
     </fragment>
 
 </navigation>
