Implementa transição de tela para lista de restaurantes.

--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:scaleType="fitXY"
-            tools:srcCompat="@drawable/TonyRoma"/>
+            tools:srcCompat="@drawable/tony_roma"/>
 
         <TextView
             android:layout_width="match_parent"
