--- a/app/src/main/res/layout/card_restaurant.xml
+++ b/app/src/main/res/layout/card_restaurant.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
-            tools:srcCompat="@drawable/TonyRoma"/>
+            tools:srcCompat="@drawable/tony_roma"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -29,9 +29,9 @@
                 android:id="@+id/tvRestaurantName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="15dp"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textStyle="bold"
                 android:textColor="@color/colorGrey3"
                 app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textColor="@color/colorGrey"
                 tools:text="Restaurant adress here."
                 app:layout_constraintTop_toBottomOf="@+id/tvRestaurantName"/>
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginBottom="10dp"
-                android:textSize="15sp"
+                android:textSize="12sp"
                 android:textColor="@color/colorGrey"
                 tools:text="Restaurant closing time here."
                 app:layout_constraintBottom_toBottomOf="parent"
