--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -14,12 +14,26 @@
             android:id="@+id/action_signInFragment_to_registerFragment"
             app:destination="@id/registerFragment"
             app:enterAnim="@android:anim/slide_in_left" />
+        <action
+            android:id="@+id/action_signInFragment_to_restaurantListFragment"
+            app:destination="@id/restaurantListFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.example.desafiomobileandroid.register.view.RegisterFragment"
         tools:layout="@layout/fragment_register"
+        android:label="@string/app_name">
+        <action
+            android:id="@+id/action_signInFragment_to_restaurantListFragment"
+            app:destination="@id/restaurantListFragment"
+            app:enterAnim="@android:anim/slide_in_left" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/restaurantListFragment"
+        android:name="com.example.desafiomobileandroid.restaurant.view.RestaurantListFragment"
+        tools:layout="@layout/fragment_restaurant_list"
         android:label="@string/app_name">
     </fragment>
 
