--- a/app/src/main/res/layout/fragment_menu_item.xml
+++ b/app/src/main/res/layout/fragment_menu_item.xml
@@ -13,21 +13,21 @@
         android:orientation="vertical">
         
         <ImageView
-            android:id="@+id/ivMeal"
+            android:id="@+id/ivMenuItem"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
             tools:srcCompat="@drawable/salada_molho_gengibre"/>
 
         <TextView
-            android:id="@+id/tvMeal"
+            android:id="@+id/tvMenuItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
             android:textAlignment="center"
             android:textColor="@color/colorGrey3"
             android:textSize="25sp"
-            app:layout_constraintTop_toBottomOf="@id/ivMeal"
+            app:layout_constraintTop_toBottomOf="@id/ivMenuItem"
             tools:text="Salada com molho de gengibre"/>
         
     </androidx.constraintlayout.widget.ConstraintLayout>
